Updating treasure table with new items

--- a/Assets/Resources/treasuretable.json
+++ b/Assets/Resources/treasuretable.json
@@ -9,7 +9,7 @@
 				{"itemType":0, "itemName":"Dagger", "chance": 0.2},
 				{"itemType":0, "itemName":"Sword", "chance": 0.25},
 				{"itemType":0, "itemName":"Staff", "chance": 0.3},
-				{"itemType":1, "itemName":"Undershirt", "chance": 0.4},
+				{"itemType":1, "itemName":"Undershirt", "chance": 0.5},
 				{"itemType":2, "itemName":"Herb", "chance": 1}
 			]
 				
@@ -19,11 +19,13 @@
 			"tableLevel": 1,
 			"tableItems":
 			[
-				{"itemType":3, "itemName":"Leather Band", "chance": 0.05},
-				{"itemType":0, "itemName":"Bow", "chance": 0.125},
+				{"itemType":3, "itemName":"Leather Band", "chance": 0.1},
+				{"itemType":0, "itemName":"Bow", "chance": 0.15},
 				{"itemType":1, "itemName":"Vest", "chance": 0.2},
 				{"itemType":1, "itemName":"Robe", "chance": 0.3},
-				{"itemType":0, "itemName":"Staff", "chance": 0.4},
+				{"itemType":2, "itemName":"Life Potion", "chance": 0.4},
+				{"itemType":2, "itemName":"Mana Potion", "chance": 0.5},
+				{"itemType":2, "itemName":"Herb", "chance": 0.7},
 				{"itemType":1, "itemName":"Undershirt", "chance": 1}
 			]
 				
@@ -33,12 +35,13 @@
 			"tableLevel": 2,
 			"tableItems":
 			[
-				{"itemType":3, "itemName":"Leather Band", "chance": 0.05},
-				{"itemType":0, "itemName":"Bow", "chance": 0.125},
-				{"itemType":1, "itemName":"Vest", "chance": 0.2},
-				{"itemType":1, "itemName":"Robe", "chance": 0.3},
-				{"itemType":0, "itemName":"Staff", "chance": 0.4},
-				{"itemType":1, "itemName":"Undershirt", "chance": 1}
+				{"itemType":0, "itemName":"Venom Dagger", "chance": 0.08},
+				{"itemType":1, "itemName":"Leather Armour", "chance": 0.125},
+				{"itemType":2, "itemName":"Mystery Seed", "chance": 0.25},
+				{"itemType":3, "itemName":"Speed Boots", "chance": 0.3},
+				{"itemType":3, "itemName":"Leather Band", "chance": 0.45},
+				{"itemType":2, "itemName":"Medicine", "chance": 0.65},
+				{"itemType":2, "itemName":"Life Potion", "chance": 1}
 			]
 				
 		},
